# AstroLocker

./: .gitignore  README.md  docker-compose.yaml
backend/: Cargo.toml  env.example
backend/migrations/: 20230812180622_create_users_table.up.sql  20230812180624_create_posts_table.up.sql  20230812180626_create_admins_table.up.sql  20230814192429_create_votes_table.down.sql  20230814192429_create_votes_table.up.sql  20230815232958_seed_tables.up.sql
backend/src/: admin_handlers.rs  db.rs  error.rs  handlers.rs  layers.rs  lib.rs  main.rs  nasa.rs  post_handlers.rs  template.rs  user_handlers.rs  vote_handlers.rs
backend/src/models/: displaypost.rs  mod.rs  nasaquery.rs  post.rs  user.rs  vote.rs
backend/src/routes/: main_routes.rs  mod.rs
backend/templates/: banned.html  index.html  main.html  pages.html
client/: Cargo.toml
client/src/: main.rs
